refactor-radical - reconstrução do feature Listar de Pessoa